pagination for reviews and some fixes
